# pytorch-zero-to-production

./: .gitignore  Course Plan.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  question.yml
.github/workflows/: ci.yml
docs/: contributing.md  course_overview.md  installation.md  repo_structure.md
notebooks/Tensor_Fundamentals/: np2ensor.ipynb  tensor_complete.ipynb  torch_fun.ipynb
